--- a/index.html
+++ b/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML Теги</title>
 </head>
 <body>
+    <h1>HTML Теги</h1>
     
+    <h2>Рядкові теги</h2>
+    <ul>
+        <li><code>span</code></li>
+        <li><code>a</code></li>
+        <li><code>em</code></li>
+        <li><code>strong</code></li>
+        <li><code>sub</code></li>
+        <li><code>sup</code></li>
+        <li><code>b</code></li>
+        <li><code>i</code></li>
+    </ul>
+
+    <h2>Блокові теги</h2>
+    <ul>
+        <li><code>div</code></li>
+        <li><code>p</code></li>
+        <li><code>h1</code></li>
+        <li><code>h2</code></li>
+        <li><code>h3</code></li>
+        <li><code>h4</code></li>
+        <li><code>h5</code></li>
+        <li><code>h6</code></li>
+        <li><code>ul</code></li>
+        <li><code>ol</code></li>
+        <li><code>li</code></li>
+    </ul>
 </body>
-</html>pavlikdaniil488@gmail.com
+</html
